[gd_scene load_steps=2 format=2]

[ext_resource path="res://Enemies/Weapons/LaserWeapon.gd" type="Script" id=1]

[node name="LaserWeapon" type="Node2D"]
script = ExtResource( 1 )

[node name="TimerOn" type="Timer" parent="."]

[node name="TimerOff" type="Timer" parent="."]
autostart = true

[node name="Rotator" type="Node2D" parent="."]

[connection signal="timeout" from="TimerOn" to="." method="_on_ShootTimer_timeout"]
[connection signal="timeout" from="TimerOff" to="." method="_on_ShootTimer_timeout"]
[connection signal="timeout" from="TimerOff" to="." method="_on_TimerOff_timeout"]
